# paffs

./: .clang-format  .gitignore  80-rcn-tty.rules  Jenkinsfile  Jenkinsfile.bigflash  Jenkinsfile.nightly  Makefile  README.md  SConstruct  tidyowl
config/K9F8G08U0M/: config.hpp
config/K9F8G08U0M/paffs/: config.hpp
config/K9F8G08U0M_MRAM/paffs/: config.hpp
config/default/: config.hpp
config/default/paffs/: config.hpp
config/flashSimu/: config.hpp
config/flashSimu/paffs/: config.hpp
doc/PAFFS_DOCUMENTATION/: Makefile  meta.tex
doc/PAFFS_DOCUMENTATION/content/: content.tex
doc/PAFFS_DOCUMENTATION/content/misc/: appendix.tex  architecture.eap  architecture.ldb  change_record.tex  distribution_list.tex  documents.bib  glossary.tex
doc/PAFFS_DOCUMENTATION/images/: paffs__fileIO.csv  paffs__fileIO.eps  paffs__fileIO_SEU.eps  paffs__file_append.csv  paffs__file_append.eps  paffs__maxFiles.eps
doc/PAFFS_DOCUMENTATION/images/origs/: AsCacheSize_comparison.csv  paffs__fileIO.xcf  paffs__fileIO_1024KB.csv  paffs__fileIO_1024KB.eps  paffs__fileIO_2048KB.csv  paffs__fileIO_2048KB.eps  paffs__fileIO_512KB.csv  paffs__fileIO_512KB.eps  paffs__fileIO_GC_annotations.xcf  paffs__fileIO_SEU.csv  paffs__maxFiles.csv  wear_levelling_comparison.csv  wear_levelling_comparison.eps  yaffs1__fileIO_1024KB.csv  yaffs1__fileIO_1024KB.eps  yaffs1__fileIO_2048KB.csv  yaffs1__fileIO_2048KB.eps
doc/PAFFS_DOCUMENTATION/presentation/: beamerouterthemebremen.sty  beamerthemeBremen.sty  presentation.tex
doc/PAFFS_DOCUMENTATION/support/: aspell.dict  commands.tex
ds/paffs/: CMakeLists.txt  SConscript  area.cpp  area.hpp  bitlist.hpp  btree.c  btree.cpp  btree.h  btree.hpp  commonTypes.hpp  dataIO.cpp  dataIO.hpp  device.cpp  device.hpp  garbage_collection.c  garbage_collection.cpp  garbage_collection.h  garbage_collection.hpp  paffs.c  paffs.cpp  paffs.h  paffs.hpp  paffs_flash.c  paffs_flash.cpp  paffs_flash.h  paffs_flash.hpp  paffs_if.h  paffs_trace.h  paffs_trace.hpp  pageAddressCache.cpp  pageAddressCache.hpp  summaryCache.cpp  summaryCache.hpp  superblock.c  superblock.cpp  superblock.h  superblock.hpp  treeCache.c  treeCache.cpp  treeCache.h  (+4 more)
ds/paffs/config/: auto.hpp  minimal_testconfig.hpp  standard.hpp
ds/paffs/config/K9F8G08U0M/: config.hpp
ds/paffs/config/default/: config.hpp
ds/paffs/config/flashSimu/: config.hpp
ds/paffs/driver/: CMakeLists.txt  SConscript  SConscript.office_model_nexys3  SConscript.simudriver  driver.h  driver.hpp  driver_conf.c  driverconf.hpp  fc_driver.cpp  fc_driver.h  null.cpp  null.hpp  office_model_nexys3.cpp  office_model_nexys3.hpp  simu.cpp  simu.hpp  simuDriver.cpp  simuDriver.hpp  yaffs_ecc.cpp
ds/paffs/tests/: CMakeLists.txt  commonTest.hpp  device.cpp  dirtest.c  dirtest.cpp  superblock.cpp  superblocktest.c  superblocktest.cpp  tree.c  tree.cpp  treeCache.cpp  unittests.cpp
ds/paffs/tests/googletest/gmock/: gmock.h
ext/: amap.cpp  amap.h  nand.cpp  nand.h  spacewire_light.cpp  spacewire_light.h
ext/amap/: amap.cpp  amap.h  uart.cpp  uart.h
ext/artix7/: amap.cpp  amap.h  nand.cpp  nand.h  spacewire_light.h
ext/nand/: nand.cpp  nand.h
ext/nexys3/: amap.cpp  gpio.cpp  gpio.h  nand.cpp  nand.h  sevensegment.cpp  sevensegment.h  spacewire_light.cpp  spacewire_light.h  spacewirelight.c  uart.cpp  uart.h
it/logic/: SConstruct  commonTest.cpp  commonTest.hpp  device.cpp  journal.cpp  pageAddressCache.cpp  summaryCache.cpp  superblock.cpp  treeCache.cpp
it/logic/config/paffs/: config.hpp
it/logic/config/simu/: config.hpp
it/misc/: SConstruct  cmd.cpp  cmd.hpp  misc.cpp
it/office_model/: Readme.md  Readme.txt  SConstruct  fatal_error_handler.cpp  grmon2gdb  main.cpp  program.sh  system.h
it/office_model2/: Readme.md  SConstruct  grmon2gdb  main.cpp
src/: SConscript  area.cpp  area.hpp  bitlist.hpp  btree.cpp  btree.hpp  commonTypes.hpp  dataIO.cpp  dataIO.hpp  device.cpp  device.hpp  garbage_collection.cpp  garbage_collection.hpp  journal.cpp  journal.hpp  journalDebug.hpp  journalEntry.cpp  journalEntry.hpp  journalPagePosStatemachine.hpp  journalPageStatemachine.hpp  journalPageStatemachine_impl.hpp  journalPersistence.hpp  journalPersistences.cpp  journalTopic.hpp  journalTopics.cpp  journalTopics.hpp  paffs.cpp  paffs.hpp  paffs_trace.hpp  pageAddressCache.cpp  pageAddressCache.hpp  pools.hpp  smartInodePtr.cpp  smartInodePtr.hpp  summaryCache.cpp  summaryCache.hpp  superblock.cpp  superblock.hpp  treeCache.cpp  treeCache.hpp  (+3 more)
src/config/: auto.hpp
src/driver/: SConscript.nulldriver  SConscript.office_model_2_artix7  SConscript.office_model_nexys3  SConscript.simublockdriver  SConscript.simudriver  driver.hpp  null.cpp  null.hpp  office_model_2_artix7.cpp  office_model_2_artix7.hpp  office_model_nexys3.cpp  office_model_nexys3.hpp  simu.cpp  simu.hpp  simuBlock.cpp  simuBlock.hpp  yaffs_ecc.hpp
test/: SConstruct  bitlist.cpp  commonTest.cpp  commonTest.hpp  inodePool.cpp  summaryCache.cpp  superblock.cpp  unittests.cpp
test/ds/paffs/: SConscript  SConstruct  bitlist.cpp  commonTest.cpp  commonTest.hpp  device.cpp  summaryCache.cpp  superblock.cpp  treeCache.cpp  unittests.cpp
test/integration/office_model/: .sconsign.dblite  RTEMS 4.12 HOWTO  fatal_error_handler.cpp  grmon2gdb  program.sh
test/unit/: .sconsign.dblite  CMakeLists.txt  SConstruct  device.cpp  scons_tree.txt  summaryCache.cpp  unittests.cpp
(+46 files in other folders)
